public/css/styles.css
/* variables */
:root {
  --primary-blue: #316bff;
  --primary-black: #1a2447;
  --secondary-gray: #f8faff;
  --secondary-blue: #1a4ccc;
  --neutral-gray1: #e6e7f3;
  --neutral-gray2: #3d3e53;
  --gray1: #e6e7f3;
  --shadow: 0 8px 16px 0 rgba(17, 10, 99, 0.04),
    0 12px 22px 0 rgba(128, 118, 247, 0.04);
  --shadow-blue: 0px 0px 10px rgba(49, 107, 255, 0.2);
  --shadow-blue-hover: 0px 0px 40px rgba(49, 107, 255, 0.5);
  --primary-gradient: linear-gradient(
    210deg,
    rgba(49, 210, 255, 1) 14%,
    rgba(49, 107, 255, 1) 50%,
    rgba(26, 76, 204, 1) 82%
  );
}
.container {
  overflow: hidden;
}

.btn {
  font-weight: 600;
  text-transform: uppercase;
  border: 2px solid;
  border-color: var(--primary-blue);
  min-width: 150px;
  padding: 0.5rem;
}
.btn-primary {
  background-color: var(--primary-blue);
  box-shadow: var(--shadow-blue);
  font-weight: 600;
  text-transform: uppercase;
}
body {
  position: relative;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Inter", sans-serif;
}
h2,
h3,
h4,
h5,
h6 {
  color: var(--primary-black);
}
h3,
h4,
h5 {
  font-weight: bold;
  margin: 1rem;
}
.toast {
  cursor: pointer;
  transition: all 0.5s ease;
  position: fixed;
  top: 75vh;
  left: 2rem;
  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
  border: 1px solid rgba(0, 0, 0, 0.125);
  width: 300px;
  border-radius: 4px;
}
.toast-header {
  border-radius: 4px 4px 0 0;
  background-color: #48bb78;
  color: white;
  padding: 0.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
}
.toast-body {
  border-radius: 0 0 14px 4px;
  background-color: var(--secondary-gray);
  padding: 1rem;
}
section {
  position: relative;
  padding-top: 4rem;
  padding-bottom: 4rem;
}
section h3 {
  text-align: center;
  /* margin-top: 4rem; */
  margin-bottom: 3rem;
  cursor: default;
}
section h3::after {
  position: absolute;
  top: 8rem;
  left: 0;
  right: 0;
  margin: auto;
  width: 100px;
  content: "";
  color: transparent;
  background: var(--primary-blue);
  height: 4px;
  box-shadow: var(--shadow-blue);
  border-radius: 4px;
  transition: all 0.2s ease;
  cursor: default;
}
section h3:hover::after {
  width: 200px;
  cursor: default;
}

/************** navbar ***************/
.navbar {
  min-height: 5rem;
  padding: 0.5rem;
  transition: all 0.2 ease;
  background-color: rgba(0, 0, 0, 0);
}
.navbar-color {
  box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
  background-color: var(--secondary-gray) !important;
}
.navbar-toggler span {
  color: var(--primary-black);
  padding: 0.5rem 0.1rem;
}
.nav-link {
  margin-left: 0.5rem;
  transition: all 0.2s;
  color: rgb(0, 0, 0);
}
.navbar-link {
  position: relative;
}
.navbar-link:after {
  transition: all 0.2s;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  width: 0%;
  content: ".";
  color: transparent;
  background: var(--primary-blue);
  height: 4px;
  border-radius: 4px;
}
.navbar-link:hover:after {
  width: 80%;
}
.active-route {
  position: relative;
}
.active-route::after {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  width: 80%;
  content: ".";
  color: transparent;
  background: var(--primary-blue);
  height: 4px;
  border-radius: 4px;
}
.nav-cta {
  background-color: var(--primary-blue);
  box-shadow: var(--shadow);
  margin-left: 0.75rem;
  color: white;
  font-weight: bold;
}
.nav-cta :focus {
  transform: scale(1.2);
  background-color: var(--secondary-blue);
}
.nav-logout {
  color: red;
  font-weight: bold;
}
@media (max-width: 992px) {
  .navbar {
    padding-top: 1.25rem;
    padding-right: 2rem;
    text-align: end;
    font-weight: 500;
  }
  .navbar .nav-link {
    margin: 0.5rem;
  }
  .navbar-toggler {
    margin-bottom: 1rem;
    display: flex;
    align-items: start;
    /* margin-bottom: 1rem; */
  }
  .nav-cta {
    margin: 1rem 0.5rem;
    margin-right: 0;
  }
  .active-route::after {
    width: 20%;
    left: 80%;
  }
  .navbar-link:hover:after {
    width: 0%;
  }
}

/*************** header *****************/
header {
  overflow: hidden;
  text-align: center;
  margin-top: 5rem;
  height: 40vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

header h1 {
  /* color: var(--primary-black); */
  background: rgb(49, 210, 255);
  background: -moz-linear-gradient(
    210deg,
    rgba(49, 210, 255, 1) 14%,
    rgba(49, 107, 255, 1) 50%,
    rgba(26, 76, 204, 1) 82%
  );
  background: -webkit-linear-gradient(
    210deg,
    rgba(49, 210, 255, 1) 14%,
    rgba(49, 107, 255, 1) 50%,
    rgba(26, 76, 204, 1) 82%
  );
  background: var(--primary-gradient);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  margin-bottom: 1rem;
  font-size: 4rem;
  font-weight: 800;
}

header p {
  color: var(--neutral-gray2);
  /* font-size: 1rem; */
  width: 400px;
  padding: auto 2rem;
  text-align: center;
}
header div {
  color: var(--primary-black);
}
@media (max-width: 992px) {
  header p {
    padding-left: 3rem;
    padding-right: 3rem;
  }
}

/*************** home ****************/

.home-header {
  min-height: 60vh;
  position: relative;
}
.details {
  color: var(--neutral-gray2);
}
.bg {
  filter: brightness(25%);
  margin-top: -5rem;
  z-index: -1;
  position: absolute;
  background-size: cover;
  /* background-image: url(../images/homebg.jpg); */
  width: 100%;
  height: 100%;
}
.center {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
  align-items: center;
}
.home-sponsors {
  overflow: hidden;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-top: 2rem;
  padding-bottom: 1rem;
  background-color: var(--secondary-gray);
  /* background-color: var(--primary-black); */
}

.home-about p {
  color: var(--primary-black);
}
.home-speakers {
  background-color: var(--secondary-gray);
}
/* ... */

